--- a/sim-intersection/cfg/config.yaml
+++ b/sim-intersection/cfg/config.yaml
@@ -2,12 +2,12 @@ get_demo: False
 train: False
 rollout: False
 
-alg: 'bc' #Choose between 'bc', 'ccil', 'stable_bc' and 'stable_ccil'
-test_case: 1 # 1: test distribution matches training distribution
+alg: 'bc' #Choose between 'bc', 'ccil', 'stable_bc' and 'stable_ccil', 'joint_bc', 'joint_denoising_bc'
+test_case: 2 # 1: test distribution matches training distribution
              # 2: test distribution has a new human agent with different behavior
              # 3: test distribution has new starting states for the robot car
 num_demos: 5
-num_rollouts: 100
+num_rollouts: 1000
 
 defaults:
     - _self_  
