--- a/stable_bc.yml
+++ b/stable_bc.yml
@@ -251,4 +251,4 @@ dependencies:
   - yaml=0.2.5=h7b6447c_0
   - zlib=1.2.13=h4ab18f5_6
   - zstd=1.5.6=ha6fb4c9_0
-prefix: /home/collab/miniconda3/envs/stable_bc
+# prefix: /home/collab/miniconda3/envs/stable_bc
