--- a/sim-quadrotor/config.yaml
+++ b/sim-quadrotor/config.yaml
@@ -1,10 +1,12 @@
 # General settings
 cuda_visible_devices: "0"
 
+#dataset
+num_dems: 20
 # Training settings
-epoch: 100
+epoch: 300
 lr: 0.0004
-batch_size: 128
+batch_size: 1024
 stability_loss_coef: 0.0001
 
 # Dataset settings
