--- a/sim-quadrotor/config.yaml
+++ b/sim-quadrotor/config.yaml
@@ -2,7 +2,7 @@
 cuda_visible_devices: "0"
 
 #dataset
-num_dems: 20
+num_dems: 100
 # Training settings
 epoch: 300
 lr: 0.0004
@@ -11,7 +11,7 @@ stability_loss_coef: 0.0001
 
 # Dataset settings
 action_noise_multiplier: 0.036
-state_noise_multiplier: 0.041
+state_noise_multiplier: 0.06 #0.041
 action_loss_weight_bc: 0.72
 action_loss_weight_denoising: 0.53
 
